[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://asset/textures/hudmenu/bgmenu.png" type="Texture" id=2]
[ext_resource path="res://asset/textures/hudmenu/bgmenubar.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "base"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("bartop1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 256, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("barbottom1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 120 ), Vector2( 256, 120 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("barbottom1:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.909804, 0.345098, 0.941176, 1 ), Color( 1, 0.521569, 0.521569, 1 ), Color( 1, 0.898039, 0.227451, 1 ), Color( 0.278431, 1, 0.509804, 1 ), Color( 0.45098, 0.627451, 1, 1 ), Color( 0.909804, 0.345098, 0.941176, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("bartop1:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.909804, 0.345098, 0.941176, 1 ), Color( 1, 0.521569, 0.521569, 1 ), Color( 1, 0.898039, 0.227451, 1 ), Color( 0.278431, 1, 0.509804, 1 ), Color( 0.45098, 0.627451, 1, 1 ), Color( 0.909804, 0.345098, 0.941176, 1 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.509804, 0.509804, 0.509804, 1 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
centered = false

[node name="bartop1" type="Sprite" parent="Sprite"]
modulate = Color( 1, 0.755377, 0.338906, 1 )
position = Vector2( 82.9979, 0 )
texture = ExtResource( 3 )
centered = false

[node name="bartop2" type="Sprite" parent="Sprite/bartop1"]
position = Vector2( -256, 0 )
texture = ExtResource( 3 )
centered = false

[node name="barbottom1" type="Sprite" parent="Sprite"]
modulate = Color( 1, 0.755377, 0.338906, 1 )
position = Vector2( 82.9979, 120 )
texture = ExtResource( 3 )
centered = false

[node name="barbottom2" type="Sprite" parent="Sprite/barbottom1"]
position = Vector2( -256, 0 )
texture = ExtResource( 3 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "base"
anims/base = SubResource( 1 )

[node name="gun fight" type="Button" parent="."]
margin_left = 5.0
margin_top = 120.0
margin_right = 95.0
margin_bottom = 150.0
rect_scale = Vector2( 3, 3 )
text = "GTA"

[node name="tube" type="Button" parent="."]
margin_left = 300.0
margin_top = 120.0
margin_right = 390.0
margin_bottom = 150.0
rect_scale = Vector2( 3, 3 )
text = "Tube"

[node name="factory" type="Button" parent="."]
margin_left = -401.0
margin_top = 578.0
margin_right = -346.0
margin_bottom = 598.0
rect_scale = Vector2( 3, 3 )
text = "factory"

[node name="pilotwings" type="Button" parent="."]
margin_left = 5.0
margin_top = 220.0
margin_right = 95.0
margin_bottom = 250.0
rect_scale = Vector2( 3, 3 )
text = "pilotwings"

[node name="pilotwings2" type="Button" parent="."]
margin_left = 588.0
margin_top = 123.0
margin_right = 678.0
margin_bottom = 153.0
rect_scale = Vector2( 3, 3 )
text = "pilotwings2"

[node name="boxe" type="Button" parent="."]
margin_left = 300.0
margin_top = 220.0
margin_right = 390.0
margin_bottom = 250.0
rect_scale = Vector2( 3, 3 )
text = "BOXE"

[node name="quit" type="Button" parent="."]
margin_left = 711.0
margin_top = 403.0
margin_right = 807.0
margin_bottom = 423.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.878431, 0.87451, 0.501961, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Quit"

[node name="macron" type="Button" parent="."]
margin_left = -189.0
margin_top = 611.0
margin_right = -73.0
margin_bottom = 631.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.878431, 0.87451, 0.501961, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Macron"

[node name="race" type="Button" parent="."]
margin_left = -563.0
margin_top = 266.0
margin_right = -470.0
margin_bottom = 286.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.878431, 0.87451, 0.501961, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Race"

[node name="aventure" type="Button" parent="."]
margin_left = -310.0
margin_top = 126.0
margin_right = -215.0
margin_bottom = 146.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.878431, 0.87451, 0.501961, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Aventure"

[node name="moto" type="Button" parent="."]
margin_left = 5.0
margin_top = 320.0
margin_right = 95.0
margin_bottom = 350.0
rect_scale = Vector2( 3, 3 )
text = "MOTO"

[connection signal="pressed" from="gun fight" to="." method="_on_platforming_pressed"]
[connection signal="pressed" from="tube" to="." method="_on_tube_pressed"]
[connection signal="pressed" from="factory" to="." method="_on_factory_pressed"]
[connection signal="pressed" from="pilotwings" to="." method="_on_pilotwings_pressed"]
[connection signal="pressed" from="pilotwings2" to="." method="_on_pilotwings2_pressed"]
[connection signal="pressed" from="boxe" to="." method="_on_boxe_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="macron" to="." method="_on_macron_pressed"]
[connection signal="pressed" from="race" to="." method="_on_race_pressed"]
[connection signal="pressed" from="aventure" to="." method="_on_aventure_pressed"]
[connection signal="button_down" from="moto" to="." method="_on_moto_button_down"]
